--- a/src/styles/base/variable.scss
+++ b/src/styles/base/variable.scss
@@ -1,11 +1,12 @@
 @import "theme";
 
 /* button */
-$tiu-button-default: #d9d9d9;
-$tiu-button-default-active: #dfdfdf;
+$tiu-button-default: #f2f2f2;
+$tiu-button-default-active: #eee;
 $tiu-button-primary: $theme-color;
 $tiu-button-primary-active: #ec5e2a;
 $tiu-button-delete: #dd2B2B;
+$tiu-button-delete-active: #dd2B2B;
 
 /* dialog */
 $tiu-dialog-background-color: #fff;
